# wiki-download-mediawiki

./: .gitignore  .pylintrc  README.md  main.py  pyproject.toml  requirements_build.txt
.github/workflows/: lint.yml  test.yml
scripts/: build.sh  lint.sh  test.sh
src/download_mediawiki/: __main__.py  main.py
