[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "download-mediawiki"
authors = [
    {name = "Rath Pascal", email = "contact@oxl.at"},
]
description = "OXL Wiki-Download Script for MediaWiki instances"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["wiki", "mirror", "archive", "converter", "downloader"]
license = {file = "LICENSE"}
classifiers = [
    'Programming Language :: Python :: 3',
    'License :: OSI Approved :: MIT License',
]
dynamic = ["dependencies", "version"]

[project.urls]
Homepage = "https://www.OXL.at"
Documentation = "https://github.com/O-X-L/wiki-download-mediawiki"
Repository = "https://github.com/O-X-L/wiki-download-mediawiki.git"
Issues = "https://github.com/O-X-L/wiki-download-mediawiki/issues"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
version = {file = ["VERSION"]}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.txt"]

[project.scripts]
download-mediawiki = "download_mediawiki.main:main"
